# electricity-map-lambda-scrapper

./: pyproject.toml
lambda_scrapper/: index.py
